scenario-2/dump/cluster-1/start-20260523T074035Z/02-istio-config/gateway.echo-term.echo-t2-term-gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.xcp.tetrate.io/v2","kind":"IngressGateway","metadata":{"annotations":{},"labels":{"xcp.tetrate.io/gatewayGroup":"tier2-term-gg","xcp.tetrate.io/workspace":"term-ws"},"name":"echo-t2-term-gw","namespace":"xcp-system"},"spec":{"http":[{"hostname":"echo-term.tetrate.io","name":"echo","port":8080,"routing":{"rules":[{"route":{"host":"echo-term/echo-term.echo-term.svc.cluster.local","port":80}}]}}],"workloadSelector":{"labels":{"app":"echo-term-gateway"},"namespace":"echo [...]
    xcp.tetrate.io/contentHash: e1ab8ad4f6be128c4904e6f0a06a7dd9
  creationTimestamp: "2026-05-23T07:30:13Z"
  generation: 1
  labels:
    istio.io/rev: global
    xcp.tetrate.io/gatewayGroup: tier2-term-gg
    xcp.tetrate.io/workspace: term-ws
  managedFields:
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:xcp.tetrate.io/contentHash: {}
        f:labels:
          .: {}
          f:istio.io/rev: {}
          f:xcp.tetrate.io/gatewayGroup: {}
          f:xcp.tetrate.io/workspace: {}
      f:spec:
        .: {}
        f:selector:
          .: {}
          f:app: {}
        f:servers: {}
    manager: xcpd
    operation: Update
    time: "2026-05-23T07:30:13Z"
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:observedGeneration: {}
        f:validationMessages: {}
    manager: pilot-discovery
    operation: Update
    subresource: status
    time: "2026-05-23T07:30:16Z"
  name: echo-t2-term-gw
  namespace: echo-term
  resourceVersion: "269047"
  uid: e514f176-cfe9-4f24-bb37-967164e7051d
spec:
  selector:
    app: echo-term-gateway
  servers:
  - hosts:
    - echo-term/echo-term.tetrate.io
    name: echo
    port:
      name: http-echo
      number: 8080
      protocol: HTTP
  - hosts:
    - echo-term/echo-term.tetrate.io
    name: echo-mtls
    port:
      name: mtls-echo
      number: 15443
      protocol: HTTPS
    tls:
      mode: ISTIO_MUTUAL
status:
  observedGeneration: "1"
  validationMessages:
  - documentationUrl: https://istio.io/v1.28/docs/reference/config/analysis/ist0162/
    level: WARNING
    type:
      code: IST0162
